# gits

./: .gitignore  README.md  gits  gits-help.txt  init  install.sh  pyproject.toml  repo_locations  repository_locations.yml  run-gits-test-plan.sh  run_gits_tests.sh  test-plan.sh  uninstall.sh
gits/: __init__.py  cli.py  config_loader.py  icons.py  main.py
gits.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
gits/commands/: clean.py  clone.py  convert.py  delete.py  doctor.py  list.py  pop.py  pull.py  stash.py  status.py
gits/ui/: __init__.py  icons.py
gits/utils/: config_loader.py  repos.py
